Added explicit read permissions + tweaked permissions
As a part of #4698 - this should fix the remaining warnings we get from the OSSF scorecard in relation to github workflows. They now all have explicit read permissions with more granular permissions granted in jobs.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,9 @@ on:
   workflow_dispatch: # Manual
   schedule:
   - cron: '0 6 * * *' # Nightly 6AM UTC
+    
+permissions:
+  contents: read
 
 jobs:
   markdown-link-check:
