--- a/.github/workflows/pr-helm.yaml
+++ b/.github/workflows/pr-helm.yaml
@@ -6,6 +6,9 @@ on:
     - '.github/workflows/pr-helm.yaml'
     - '.github/scripts/helm-check-expected.sh'
     - 'tools/ci/helm-values/**'
+    - 
+permissions:
+  contents: read
 
 jobs:
   sanity-check:
