--- a/.github/workflows/update-certs.yml
+++ b/.github/workflows/update-certs.yml
@@ -5,12 +5,15 @@ on:
   schedule:
   - cron: '0 6 * * *' # Nightly 6AM UTC
 
+
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 jobs:
   update-certs:
+    permissions:
+      contents: write  # for peter-evans/create-pull-request to create branch
+      pull-requests: write  # for peter-evans/create-pull-request to create a PR
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
