--- a/.github/workflows/goreleaser-orbit.yaml
+++ b/.github/workflows/goreleaser-orbit.yaml
@@ -6,12 +6,14 @@ on:
      - 'orbit-*'
      
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   goreleaser:
     runs-on: macos-latest
     environment: Docker Hub
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@629c2de402a417ea7690ca6ce3f33229e27606a5 # v2
