Fix codeowners and revert pull 4798 as it stepped on 4834

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,7 +7,8 @@ go.mod @fleetdm/go
 /cmd/ @fleetdm/go
 
 # Infra/terraform
-*.tf @edwardsb
+*.tf @edwardsb @zwinnerman-fleetdm
+/tools/loadtesting/terraform @zwinnerman-fleetdm
 
 # GitHub settings + actions
 /.github/ @zwass
