Add build check step

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -30,12 +30,17 @@ jobs:
         uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492 # v2
         with:
           go-version: ${{ matrix.go-version }}
-      - uses: actions/checkout@629c2de402a417ea7690ca6ce3f33229e27606a5 # v2
-      - name: golangci-lint
+      - name: Checkout repository
+        uses: actions/checkout@629c2de402a417ea7690ca6ce3f33229e27606a5 # v2
+      - name: Build Check
+        run: |
+          go version
+          go build ./...
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@5c56cd6c9dc07901af25baab6f2b0d9f3b7c3018 # v2
         with:
           # Required: the version of golangci-lint is required and must be
           # specified without patch version: we always use the latest patch
           # version.
-          version: v1.43
+          version: v1.42
           args: --timeout 10m
