--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -42,4 +42,5 @@ jobs:
           # version.
           version: v1.42
           args: --timeout 10m
-          skip-cache: true
+          skip-pkg-cache: true
+          skip-build-cache: true
