--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,14 +11,14 @@ on:
       - '**.ts'
       - '**.tsx'
   pull_request:
-#    # The branches below must be a subset of the branches above
-#    branches: [ main ]
-#    paths:
-#      - '**.go'
-#      - '**.js'
-#      - '**.jsx'
-#      - '**.ts'
-#      - '**.tsx'
+    # The branches below must be a subset of the branches above
+    branches: [ main ]
+    paths:
+      - '**.go'
+      - '**.js'
+      - '**.jsx'
+      - '**.ts'
+      - '**.tsx'
   schedule:
     - cron: '18 17 * * 1'
 
