Introduce API version 2022-04, deprecate use of `/global` in paths (#4731)

--- a/docs/Using-Fleet/configuration-files/multi-file-configuration/organization-settings.yml
+++ b/docs/Using-Fleet/configuration-files/multi-file-configuration/organization-settings.yml
@@ -14,7 +14,7 @@ spec:
         distributed_plugin: tls
         distributed_tls_max_attempts: 3
         logger_plugin: tls
-        logger_tls_endpoint: /api/v1/osquery/log
+        logger_tls_endpoint: /api/osquery/log
         logger_tls_period: 10
         pack_delimiter: /
     overrides: {}
