--- a/docs/Using-Fleet/configuration-files/single-file-configuration.yml
+++ b/docs/Using-Fleet/configuration-files/single-file-configuration.yml
@@ -14,7 +14,7 @@ spec:
         distributed_plugin: tls
         distributed_tls_max_attempts: 3
         logger_plugin: tls
-        logger_tls_endpoint: /api/v1/osquery/log
+        logger_tls_endpoint: /api/osquery/log
         logger_tls_period: 10
         pack_delimiter: /
     overrides: {}
